--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "collabflow",
   "version": "0.1.0",
+  "author": {
+    "name": "Aditya Yaduvanshi",
+    "email": "aditya97y@gmail.com"
+  },
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,19 +13,42 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.29.5",
+    "@liveblocks/client": "^1.9.7",
+    "@liveblocks/node": "^1.9.7",
+    "@liveblocks/react": "^1.9.7",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "convex": "^1.8.0",
+    "convex-helpers": "^0.1.15",
+    "date-fns": "^3.3.1",
+    "lucide-react": "^0.321.0",
+    "next": "14.1.0",
+    "next-themes": "^0.2.1",
+    "query-string": "^8.2.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "sonner": "^1.4.0",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^2.12.1",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "typescript": "^5"
   }
 }
