--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
     "convex-helpers": "^0.1.15",
     "date-fns": "^3.3.1",
     "lucide-react": "^0.321.0",
+    "nanoid": "^5.0.5",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
+    "perfect-freehand": "^1.2.0",
     "query-string": "^8.2.0",
     "react": "^18",
+    "react-contenteditable": "^3.3.7",
     "react-dom": "^18",
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
